--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
+.white_text {
+  color: #FFFFFF;
+}
+
 #root {
   width: 1600px;
   margin: auto;
@@ -16,11 +24,30 @@ header {
   background-color: #1B1B1B;
 }
 
-header a {
-  color: #FFFFFF;
+header .link_row {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-header .symbol {
+header .link_row .button{
+  margin-right: 100px;
+  padding: 10px 5px;
+  background-color: #D2401E;
+}
+
+header .link_row .white_text{
+  margin: 0 20px;
+  font-size: 12px;
+}
+
+header .link_row .symbol {
   width: 20px;
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(2%) hue-rotate(322deg) brightness(105%) contrast(101%);
+}
+
+header .link_row .logo {
+  margin: 0 20px;
+  width: 150px;
 }
