--- a/css/style.css
+++ b/css/style.css
@@ -19,26 +19,35 @@ a {
 }
 
 /* REGOLE HEADER */
+/* regole generali */
 header {
   height: 600px;
   background-color: #1B1B1B;
+  background-image: url('../img/h3-rev-img-5.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 header .link_row {
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-header .link_row .button{
-  margin-right: 100px;
-  padding: 10px 5px;
-  background-color: #D2401E;
+header .link_row .box {
+  width: 300px;
+}
+
+header .link_row .box.left {
+  text-align: right;
+}
+
+header .link_row .box.right {
+  text-align: left;
 }
 
 header .link_row .white_text{
-  margin: 0 20px;
+  margin: 0 10px;
   font-size: 12px;
 }
 
@@ -47,7 +56,69 @@ header .link_row .symbol {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(2%) hue-rotate(322deg) brightness(105%) contrast(101%);
 }
 
+/* regole pulsante a sx */
+header .link_row .button{
+  padding: 10px 20px;
+  background-color: #D2401E;
+}
+
+/* regole logo */
 header .link_row .logo {
-  margin: 0 20px;
+  margin: 20px;
   width: 150px;
+}
+
+/* regole motorino */
+header .link_row .position {
+  position: relative;
+}
+
+header .link_row .bike {
+  width: 25px;
+}
+
+header .link_row .backpack {
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  top: -10px;
+  left: -5px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  color: #D2401E;
+}
+
+header .link_row .fa-search {
+  transform: rotateY(180deg);
+}
+
+/* regole jumbotron */
+header .jumbotron {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .jumbotron .arrow {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+}
+
+header .jumbotron .arrow.prev {
+  transform: translate(-50%, 0);
+}
+
+header .jumbotron .arrow.next {
+  transform: translate(50%, 0);
+}
+
+
+header .jumbotron img {
+  width: 300px;
 }
