--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,18 @@ header .jumbotron img {
 
 /* REGOLE FOOTER */
 footer {
-  /* debug */
-  height: 200px;
-  background-color: black;
+  height: 600px;
+  margin-top: 10px;
+  display: flex;
+}
+
+footer .left {
+  height: 100%;
+  background-color: #1B1B1B;
+}
+
+footer .right {
+  position: relative;
+  background-image: url(../img/footer-img-1.jpg);
+  background-size: cover;
 }
